--- a/.github/workflows/remove-old-artifacts.yml
+++ b/.github/workflows/remove-old-artifacts.yml
@@ -1,8 +1,8 @@
 name: Remove old artifacts
 
 on:
-  pull_request:
-    branches: [ master ]
+#  push:
+#    branches: [ master ]
 
   schedule:
     # Runs at 01:00 UTC on the 1, 8, 15, 22 and 29th of every month.
